Fix 500 on payment status check when a student hasn't paid yet
Map.of(data, status) threw NullPointerException whenever status was
null (Map.of rejects null values) — which is the normal case for a
student who hasn't paid. That 500 was silently caught by the
Dashboard's fetch chain, resetting feeConfig along with it, causing
the registration-fee banner to flash and then incorrectly disappear
instead of staying visible.